# ai-cloud-storage

./: .env.test  .gitignore  CURRENT_STATUS.md  Dockerfile  QUICKSTART.md  README.md  SAVE_POINT.md  alembic.ini  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.yml  logging.conf  next.config.js  pyproject.toml  pytest.ini  requirements.txt  setup.py  start_server.sh  test-requirements.txt  test_upload.txt
ai_cloud_storage.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
alembic/: env.py
alembic/versions/: 20240101_add_retry_fields.py  20241126_003837_e4117c04da4d_create_initial_tables.py  20241126_203259_6d25e058d779_create_initial_schema.py  20241126_create_schema.py  20241126_fix_dependencies.py
app/: __init__.py  main.py
app/core/: __init__.py  config.py  database.py  dependencies.py  events.py  exceptions.py  health.py  logging.py  middleware.py  minio.py  models.py  repository.py  security.py
app/models/: __init__.py
app/modules/: __init__.py
app/modules/ai_processor/: __init__.py  ai_engine.py  dependencies.py  models.py  repository.py  retry_handler.py  routes.py  schemas.py  service.py  task_processor.py
app/modules/auth/: __init__.py  dependencies.py  models.py  repository.py  routes.py  schemas.py  security.py  service.py
app/modules/minio/: __init__.py  client.py
app/modules/storage/: __init__.py  dependencies.py  folder_routes.py  models.py  repository.py  router.py  routes.py  schemas.py  service.py
app/utils/: retry_handler.py
db/: init-db.sh  init.sql
docs/: README.md
docs/api/: README.md
docs/architecture/: overview.md
docs/operations/: deployment.md  monitoring.md  security.md
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/components/: AIInteraction.tsx  FileManager.tsx  SearchInterface.tsx
frontend/cypress/e2e/: main.cy.ts
frontend/src/: config.ts  middleware.ts
frontend/src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/components/: Chat.tsx  DocumentList.tsx  DocumentUploader.tsx  ErrorBoundary.tsx  FileList.tsx  FileUploader.tsx  Layout.tsx  Search.tsx  StorageAnalytics.tsx
frontend/src/config/: index.ts
services/ai-processor/: Dockerfile  README.md  pyproject.toml
services/ai-processor/app/: main.py
services/ai-processor/app/api/v1/: api.py
services/ai-processor/app/api/v1/endpoints/: processing.py
services/ai-processor/app/core/: config.py
services/ai-processor/app/schemas/: processing.py
services/ai-processor/app/services/: embedding.py  ocr.py  processor.py  weaviate_client.py
services/auth/: alembic.ini  pyproject.toml  setup.py
services/auth/alembic/: env.py
services/auth/alembic/versions/: bb02c9f4627c_initial_migration.py
services/auth/app/: main.py
services/auth/app/api/: deps.py
services/auth/app/api/v1/endpoints/: auth.py
services/auth/app/core/: config.py  database.py  init_db.py  logging.py  security.py
services/auth/app/models/: user.py
services/auth/app/schemas/: token.py  user.py
services/auth/scripts/: init_db.py
services/storage/: Dockerfile  README.md  pyproject.toml
services/storage/app/: main.py
services/storage/app/api/v1/: api.py
services/storage/app/api/v1/endpoints/: buckets.py  files.py  system.py
services/storage/app/core/: config.py
services/storage/app/middleware/: monitoring.py
services/storage/app/schemas/: bucket.py  file.py
services/storage/app/services/: backup.py  minio.py  monitoring.py  quota.py
tests/: config.py  conftest.py  logging_config.py  requirements-test.txt  test_ai_processor_service.py  test_auth_service.py  test_gateway_service.py  test_live_endpoints.py  test_retry_handler.py  test_storage_api.py  test_storage_service.py  utils.py
tests/core/: test_security.py
tests/integration/: test_ai_processor_routes.py  test_auth_routes.py  test_chat_routes.py  test_error_handling.py  test_folder_routes.py  test_storage_routes.py
tests/load/: k6.config.js  scenarios.js
tests/performance/: analyze_metrics.py  locustfile.py  test_performance.py
tests/retry_tests/: conftest.py  pytest.ini  requirements.txt  test_retry_handler.py
(+69 files in other folders)
